--- a/clear.html
+++ b/clear.html
@@ -9,6 +9,6 @@
     <br> Cleared Cookies
     <br> Cleared Files
     <br>
-    <br> <a href = "main.html"><button>Go Back</button></a>
+    <br> <a href = "index.html"><button>Go Back</button></a>
     </center>
 </body>
